force-app/main/default/staticresources/python/Disappear/src/objects/Publication__c.object
<CustomObject>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <label>Publication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Abstract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Board Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMCP Dossier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Chapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brief Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS/Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manuscript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Presentation (Slide Deck)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplement Article (Non English Language Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RAE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Amgen Employee (RAE)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_FormulaField__c</fullName>
        <formula>Country__r.RegionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_pick__c</fullName>
        <description>To be deleted</description>
        <label>Region Pick</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Approval_By__c</fullName>
        <label>Request Approval By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route_Pattern__c</fullName>
        <description>The Route Pattern [ DS : SG : PI ] used to generate the Reviewer Team.
User must change Route Pattern before starting the Terminate FPR Cycle process.</description>
        <label>Route Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOP Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_Full__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeOfWork__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope Of Work</label>
        <referenceTo>MEScopeOfWork__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Identifier__c</fullName>
        <inlineHelpText>Enter a brief identifier you can use to search on for this publication later</inlineHelpText>
        <label>Search Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <description>Used for legacy data mapping</description>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SponsorDept_Pick__c</fullName>
        <label>Sponsoring Amgen Department</label>
        <picklist>
            <picklistValues>
                <fullName>Center for Observational Research (CfOR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Government Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Health Economics (GHE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Regulatory Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Scientific Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Value, Access, and Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translational Sciences</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SponsorOrg_Pick__c</fullName>
        <label>Sponsoring Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Amgen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astellas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AstraZeneca/MedImmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cytokinetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daiichi-Sankyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genentech, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlaxoSmithKline (GSK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kirin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novartis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pfizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCB Pharma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsored_Date__c</fullName>
        <label>FPR Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SponsoringDept__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Department from which publication data are generated.</inlineHelpText>
        <label>Sponsoring Amgen Department (Lookup)</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Publication (SponsoringDept)</relationshipLabel>
        <relationshipName>Publication1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SponsoringOrg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Company from which publication is generated.  (e.g. Amgen, Pfizer, etc.)</inlineHelpText>
        <label>Sponsoring Organization (Lookup)</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Publication (SponsoringOrg)</relationshipLabel>
        <relationshipName>Publication2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link Publication to a SubGroup - which we can find the DataSource for the publication.
This link is very important for the auto population of FPR Reviewer.</description>
        <inlineHelpText>For purposes of FPR routing, functional group from which publication content/or data was orignated. Enter one of these selections - Research, Development, Operations - before clicking the Lookup icon.  Then select a SubGroup from the Search Results list.</inlineHelpText>
        <label>SubGroup Link</label>
        <referenceTo>SubGroup__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubGroup_pick__c</fullName>
        <inlineHelpText>Required and depends on Data Source selected</inlineHelpText>
        <label>Data Source Subgroup</label>
        <picklist>
            <controllingField>Data_Source__c</controllingField>
            <picklistValues>
                <fullName>Global Dev - Asia Pac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - EEMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - Intercont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - JAPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - LACAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dev - US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRAAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops - Comm Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops - DP&amp;DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops - Mfg Sciences &amp; Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops - Process Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops - Quality Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - CBSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Early Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Genome Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Hem &amp; Onc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Inflammation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Neuroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - P&amp;PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Pharmaceutics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - PKDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - SMP&amp;PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Therapeutic Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Therapeutic Innovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggestor__c</fullName>
        <description>The first name and last name associated to who created the publication.</description>
        <formula>CreatedBy.FirstName + &quot; &quot; +  CreatedBy.LastName</formula>
        <label>Suggestor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Used primarily for data migration, not currently on layout</description>
        <label>Summary</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field relates to the TA object
It will be set by the Publication Trigger as part of Pre Upsert
based on value of TA_pick__c similar to PubType</description>
        <label>Therapeutic Area</label>
        <referenceTo>TherapeuticArea__c</referenceTo>
        <relationshipLabel>Publication</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Submission_Date__c</fullName>
        <formula>Meeting__r.Latest_Target_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <description>Default TargetType for the next Submission Cycle</description>
        <label>Target Type</label>
        <picklist>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <description>Used for Data Migration</description>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_by_Login__c</fullName>
        <description>Used for data migration</description>
        <label>Updated by Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBiosimilarAcronym__c</fullName>
        <description>Determines whether the biosimilars related acronym appears in the publication title.  Specifically used for Reporting purposes only.  This field is not visible anywhere in APPEAR page layouts.</description>
        <formula>OR(
CONTAINS(UPPER(Publication_Title__c), &quot;FOB &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; FOB&quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; FOB &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot;SEB &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; SEB &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; SEB&quot;),
CONTAINS(UPPER(Publication_Title__c), &quot;ABP &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; ABP&quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; ABP &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot;BPCIA &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; BPCIA&quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; BPCIA &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot;ACA &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; ACA&quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; ACA &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot;PPACA &quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; PPACA&quot;),
CONTAINS(UPPER(Publication_Title__c), &quot; PPACA &quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBiosimilarAcronym</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEnbrel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to manage the sharing with those users that should not have access to Enbrel pubs</description>
        <label>isEnbrel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExecution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFPR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if publication is an FPR Only Publication</description>
        <label>FPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isISS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isISStext__c</fullName>
        <description>Whenever the isISS flag is checked, user will enter value in this field.
Changed to ISS# as per defect 167</description>
        <label>ISS #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPlanning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part of GPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSuggestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuggestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_MTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MTA</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Legacy_PublicationID__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>Current_Submission_Cycle_Num__c</columns>
        <columns>Current_FPR_Cycle_Num__c</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Current_Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Suggestions</fullName>
        <columns>NAME</columns>
        <columns>Legacy_PublicationID__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>Current_Submission_Cycle_Num__c</columns>
        <columns>Current_FPR_Cycle_Num__c</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Current_Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Publication__c.Suggested,Publication__c.Suggestion</value>
        </filters>
        <label>All Suggestions</label>
    </listViews>
    <listViews>
        <fullName>All_recent</fullName>
        <columns>NAME</columns>
        <columns>Legacy_PublicationID__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>Current_Submission_Cycle_Num__c</columns>
        <columns>Current_FPR_Cycle_Num__c</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Current_Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/5/2013 12:00 AM</value>
        </filters>
        <label>All recent</label>
    </listViews>
    <listViews>
        <fullName>In_FPR</fullName>
        <columns>NAME</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>FPR_Submitter_text__c</columns>
        <columns>FPR_Due_Date__c</columns>
        <columns>Current_Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Status_FormulaField__c</field>
            <operation>equals</operation>
            <value>In FPR</value>
        </filters>
        <label>In FPR</label>
    </listViews>
    <listViews>
        <fullName>In_FPR_Assigned_FPRC</fullName>
        <columns>NAME</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>FPR_Submitter_text__c</columns>
        <columns>FPR_Due_Date__c</columns>
        <columns>Current_Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Status_FormulaField__c</field>
            <operation>equals</operation>
            <value>In FPR</value>
        </filters>
        <filters>
            <field>Assigned_FPRC__c</field>
            <operation>notEqual</operation>
            <value>kevin gin</value>
        </filters>
        <label>In FPR Assigned FPRC</label>
    </listViews>
    <listViews>
        <fullName>In_FPR_Due_Soon</fullName>
        <columns>NAME</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>FPR_Submitter_text__c</columns>
        <columns>FPR_Due_Date__c</columns>
        <columns>Current_Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Status_FormulaField__c</field>
            <operation>equals</operation>
            <value>In FPR</value>
        </filters>
        <filters>
            <field>FPR_Due_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2013</value>
        </filters>
        <label>In FPR Due Soon</label>
    </listViews>
    <listViews>
        <fullName>Submitted_to_Target</fullName>
        <columns>NAME</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Status_FormulaField__c</field>
            <operation>equals</operation>
            <value>Submitted/Completed</value>
        </filters>
        <label>Submitted to Target</label>
    </listViews>
    <listViews>
        <fullName>Suggestion_Queue</fullName>
        <columns>NAME</columns>
        <columns>Current_Status_FormulaField__c</columns>
        <columns>Publication_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Status_FormulaField__c</field>
            <operation>equals</operation>
            <value>Suggested</value>
        </filters>
        <label>Suggestion Queue</label>
    </listViews>
    <nameField>
        <displayFormat>Pub-Id-{000000}</displayFormat>
        <label>Pub ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication</pluralLabel>
    <recordTypes>
        <fullName>Accepted_Version</fullName>
        <active>true</active>
        <label>Accepted Version</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assigned_to_FPRC</fullName>
        <active>true</active>
        <label>Assigned to FPRC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Execute</fullName>
        <active>true</active>
        <label>Execute</label>
    </recordTypes>
    <recordTypes>
        <fullName>FPR_Only</fullName>
        <active>true</active>
        <description>Used for FPR only requests coming from non-core team members</description>
        <label>FPR Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_FPR</fullName>
        <active>true</active>
        <label>In FPR</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegacyFPROnly</fullName>
        <active>true</active>
        <description>Siebel Legacy FPR Only Publication at Terminal Status during cutover to APPEAR</description>
        <label>Legacy FPR Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegacyFPROnlyInProgress</fullName>
        <active>true</active>
        <description>Siebel Legacy FPR Only Publication NOT at Terminal Status during cutover to APPEAR</description>
        <label>Legacy FPR Only In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegacyInProgress</fullName>
        <active>true</active>
        <description>Siebel Legacy publications not reached terminal status at cutover</description>
        <label>Legacy In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_Publication</fullName>
        <active>true</active>
        <description>Record Type for all migrated Publication from Siebel in terminal state</description>
        <label>Legacy Publication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plan</fullName>
        <active>true</active>
        <label>Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resubmit_to_FPR</fullName>
        <active>true</active>
        <description>Used to resubmit when status is FPR Withheld, Withdrawn, or Material Chages for Authors</description>
        <label>Resubmit to FPR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Review</fullName>
        <active>true</active>
        <label>Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submit</fullName>
        <active>true</active>
        <label>Submit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggested</fullName>
        <active>true</active>
        <description>Used by GPPL to accept and reject</description>
        <label>Suggested</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggestion</fullName>
        <active>true</active>
        <label>Suggestion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ExternalWriter__c</fullName>
        <label>Appear External Writer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PubReviewTeamMember__c</fullName>
        <label>Review Team Member</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PubTeamMemberReadOnly__c</fullName>
        <label>Publication Team Member Read Only</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PubTeamMember__c</fullName>
        <label>Publication Team Member</label>
    </sharingReasons>
    <validationRules>
        <fullName>Country_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( SubGroup__r.Name = &apos;Global Dev - Europe&apos;, SubGroup__r.Name = &apos;Global Dev - Intercont&apos;, SubGroup__r.Name = &apos;Global Dev - JAPAC&apos;, SubGroup__r.Name = &apos;Global Dev - US&apos;,isPlanning__c), ISBLANK(Country__c))</errorConditionFormula>
        <errorDisplayField>Country_pick__c</errorDisplayField>
        <errorMessage>Required in Details Tile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GPP_Type_Required</fullName>
        <active>true</active>
        <description>(Deprecated R1 2017)For the Publications which are part of GPP checked, &quot;GPP Type&quot; field will be required.
(R1 2017)GPP Type is made required for All Publications.</description>
        <errorConditionFormula>ISPICKVAL(GPP_Type__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>GPP_Type__c</errorDisplayField>
        <errorMessage>Publication Classification is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ISS_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( isISS__c=TRUE ,  ISBLANK(isISStext__c))</errorConditionFormula>
        <errorDisplayField>isISStext__c</errorDisplayField>
        <errorMessage>ISS # is a required field when ISS flag is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MTA_Required</fullName>
        <active>true</active>
        <description>Checks if MTA box is checkmarked and requires an MTA # if true</description>
        <errorConditionFormula>AND( is_MTA__c=TRUE ,  ISBLANK(MTA__c))</errorConditionFormula>
        <errorMessage>Please enter MTA # as MTA flag has been selected/checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PST_Approval_Date</fullName>
        <active>true</active>
        <description>Once this date is entered, it can be changed through Feb 15 (this should be a variable since it may be changed later) of the calendar year it was created, but then be locked for the life of the publication record</description>
        <errorConditionFormula>AND( 
ISCHANGED(PST_Approval_Submission_Date__c), 
NOT(ISBLANK(PRIORVALUE(PST_Approval_Submission_Date__c))), 
OR(YEAR(DATEVALUE(PST_Approved_Audit_Date__c)) &lt;&gt; YEAR (TODAY()), 
NOT(OR(MONTH(TODAY()) == 1,And(MONTH(TODAY())==2,DAY(TODAY())&lt;=15)))), 
NOT(CONTAINS($Profile.Name, &apos;Admin&apos;)) 
)</errorConditionFormula>
        <errorMessage>PST Approved Submission Date cannot be modified after Feb 15th after it has been entered for the first time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejected_publication_is_read_only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Current_Status_FormulaField__c = &apos;Rejected&apos;,  $Profile.Name =&apos;APPEAR Pub Team&apos;)</errorConditionFormula>
        <errorMessage>Suggestor have Read Only access to this suggestion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Responsible_Amgen_Employee</fullName>
        <active>true</active>
        <description>If part of GPP field is checked,Responsible Amgen Employee field is required</description>
        <errorConditionFormula>AND(isPlanning__c,ISBLANK(RAE__c))</errorConditionFormula>
        <errorDisplayField>RAE__c</errorDisplayField>
        <errorMessage>Required  in Details Tile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Pub_Classification_Field_Update</fullName>
        <active>true</active>
        <description>Validation rule is used to restrict users other than GPPL , BA and System Admin profile to change or update publication classification field value.</description>
        <errorConditionFormula>AND(ISCHANGED( GPP_Type__c ), $Profile.Name  &lt;&gt; &apos;APPEAR GPPL&apos; , $Profile.Name  &lt;&gt; &apos;System Administrator&apos;, $Profile.Name  &lt;&gt; &apos;APPEAR Business Admin&apos; )</errorConditionFormula>
        <errorDisplayField>GPP_Type__c</errorDisplayField>
        <errorMessage>Please reach out to your GPPL to update the Publication Classification.  You can find a list of GPPLs on the GPPL SharePoint page located at https://myteams.amgen.com/sites/PubPlanning/Pages/GPPLLayout.aspx</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sponsoring_Amgen_Department_Required</fullName>
        <active>true</active>
        <description>part of GPP field is checked, Sponsoring Amgen Department field is required</description>
        <errorConditionFormula>AND(isPlanning__c,ISPICKVAL(SponsorDept_Pick__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SponsorDept_Pick__c</errorDisplayField>
        <errorMessage>Required in  Details Tile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sponsoring_Organization_required</fullName>
        <active>true</active>
        <description>If part of GPP field is checked, Sponsoring Amgen Department field is required</description>
        <errorConditionFormula>AND(isPlanning__c,ISPICKVAL(SponsorOrg_Pick__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SponsorOrg_Pick__c</errorDisplayField>
        <errorMessage>Required in Details  Tile</errorMessage>
    </validationRules>
</CustomObject>